Builder Element Box Overflow Fix

--- a/wp-content/themes/impruwclientparent/css/less/builder.less
+++ b/wp-content/themes/impruwclientparent/css/less/builder.less
@@ -244,6 +244,8 @@ a {
 		font-weight: 400;
 		font-size: 0.7em;
 		padding: 0.5em 0.5em 0;
+		overflow: auto;
+		max-height: 70vh;
 		.aj-imp-builder-items {
 			margin: 0;
 			list-style: none;
